[package]
name = "redf"
version = "0.1.0"
edition = "2021"
default-run = "redf"

[[bin]]
name = "generate-schema"
path = "src/generate-schema.rs"
required-features = ["json_schema"]

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
convert_case = "0.5.0"
handlebars = "4.3.2"
schemars = { version = "0.8.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.8.23"

[features]
json_schema = ["schemars"]
