[package]
name = "redf"
version = "0.1.0"
edition = "2021"
default-run = "redf"
license-file = "LICENSE"

[[bin]]
name = "generate-schema"
path = "src/generate-schema.rs"
required-features = ["json_schema"]

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
convert_case = "0.5.0"
regex = "1.6.0"
schemars = { version = "0.8.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.8.23"
tera = "1.16.0"

[features]
json_schema = ["schemars"]
