<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>redf</name>
  <version>0.1.0</version>
  <description>A tool to describe ROS endpoints</description>
  <author email="koonpeng@intrinsic.ai">Teo Koon Peng</maintainer>
  <maintainer email="yadunund@intrinsic.ai">Yadunund</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>cargo</build_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
